--- a/proyectoconjutno3_OValenzuela_BValadez.ipynb
+++ b/proyectoconjutno3_OValenzuela_BValadez.ipynb
@@ -9,31 +9,34 @@
     "    \n",
     "### <font color='navy'> Simulación de procesos financieros. \n",
     "\n",
-    "**Nombres:** #############.\n",
+    "**Nombres:** Osckar Valenzuela y Brisa Valadez.\n",
     "\n",
-    "**Fecha:** XX de octubre del 201X.\n",
+    "**Fecha:** 22 de febrero del 2023.\n",
     "\n",
     "**Expediente** : XXX.\n",
     "**Profesor:** Oscar David Jaramillo Zuluaga.\n",
     "    \n",
-    "**Link Github**: Link con el enlace del repositorio del creador del proyecto\n",
+    "**Link Github**: https://github.com/Osckar11/proyectoconjunto3_OValenzuela_BValadez.git\n",
     "\n",
-    "# Tarea X: Clase X"
+    "# Tarea 3: Clase 6"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Enunciado de tarea (Transcibirlo)\n",
-    "> Descripción de la tarea"
+    " ## Tarea 3: (Usando notebook de jupyter)** \n",
+    "> Usando compresión de listas o funciones map(sino recuerda como funciona observar el siguiente enlace https://www.pythonforbeginners.com/lists/list-comprehensions-in-python/), resolver los siguientes ejercicios:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio 1: (enunciado) Transcribirlo"
+    "### Ejercicio 1:\n",
+    ">1. Resolver la siguiente ecuación recursiva usando funciones como se vió en clase\n",
+    "$$ D_{n}=(n-1) D_{n-1}+(n-1) D_{n-2} \\quad n\\ge 3$$\n",
+    "con $D_1=0$ y $D_2 = 1$\n"
    ]
   },
   {
@@ -50,10 +53,7 @@
    "outputs": [],
    "source": [
     "# Código de solución estudiante 1\n",
-    ".\n",
-    ".\n",
-    ".\n",
-    ".\n"
+    "\n"
    ]
   },
   {
@@ -70,24 +70,193 @@
    "outputs": [],
    "source": [
     "# Código de solución estudiante 2\n",
-    ".\n",
-    ".\n",
-    ".\n",
-    ".\n"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Respuesta planteada en el ejercicio usando (markdown)\n",
-    " La respuesta es ........."
+    "### Ejercicio 2:\n",
+    ">2. Count the number of spaces in the following string `variable =  relaciónn  requiere,  para obtener  el  valor  de un  cierto  término,  el conocimiento de los dos anteriores`.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Código de solución estudiante 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Código de solución estudiante 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 3:\n",
+    ">3. Remove all of the vowels in a string [make a list of the non-vowels].\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Código de solución estudiante 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Código de solución estudiante 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 4:\n",
+    ">4. Find all of the words in a string that are less than 4 letters.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Código de solución estudiante 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Código de solución estudiante 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 5:\n",
+    ">5. Use a dictionary comprehension to count the length of each word in a sentence.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Código de solución estudiante 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Código de solución estudiante 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 6:\n",
+    ">6. Use a nested list comprehension to find all of the numbers from 1-1000 that are divisible by any single digit besides 1 (2-9). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Código de solución estudiante 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Código de solución estudiante 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -101,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
