--- a/proyectoconjunto3_OValenzuela_BValadez.ipynb
+++ b/proyectoconjunto3_OValenzuela_BValadez.ipynb
@@ -9,11 +9,11 @@
     "    \n",
     "### <font color='navy'> Simulación de procesos financieros. \n",
     "\n",
-    "**Nombres:** Osckar Valenzuela y Brisa Valadez.\n",
+    "**Nombres:** Osckar Valenzuela y Michelle Valadez.\n",
     "\n",
     "**Fecha:** 22 de febrero del 2023.\n",
     "\n",
-    "**Expediente** : XXX.\n",
+    "**Expediente** : XXX | 734547\n",
     "**Profesor:** Oscar David Jaramillo Zuluaga.\n",
     "    \n",
     "**Link Github**: https://github.com/Osckar11/proyectoconjunto3_OValenzuela_BValadez.git\n",
@@ -70,7 +70,19 @@
    "outputs": [],
    "source": [
     "# Código de solución estudiante 2\n",
-    "\n"
+    "\n",
+    "def calcular_D(n):\n",
+    "    if n == 1:\n",
+    "        return 0\n",
+    "    elif n == 2:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return (n-1) * calcular_D(n-1) + (n-1) * calcular_D(n-2)\n",
+    "\n",
+    "valores_de_n = [0,1,2,3, 4, 5,6,7,8] #pueden ser más si se desea\n",
+    "d_valores = list(map(calcular_D, valores_de_n))\n",
+    "\n",
+    "print(d_valores)"
    ]
   },
   {
@@ -104,10 +116,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La oración contiene un total de 26 espacios\n"
+     ]
+    }
+   ],
+   "source": [
+    "oracion = \"variable =  relación  requiere,  para obtener  el  valor  de un  cierto  término,  el conocimiento de los dos anteriores\"\n",
+    "lista_de_caracteres = list(oracion)\n",
+    "espacios = map(lambda x: 1 if x == \" \" else 0, lista_de_caracteres)\n",
+    "print(\"La oración contiene un total de\", sum(espacios), \"espacios\")"
+   ]
   },
   {
    "cell_type": "markdown",
