--- a/proyectoconjunto3_OValenzuela_BValadez.ipynb
+++ b/proyectoconjunto3_OValenzuela_BValadez.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,14 +57,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 9, 44, 265, 1854, 14833, 133496, 1334961]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Código de solución estudiante 1\n",
+    "def calcular_d(n):\n",
+    "    if n==1:\n",
+    "        return 0\n",
+    "    elif n==2:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return (n-1) * calcular_d(n-1) + (n-1) * calcular_d(n-2)\n",
+    "valores=[1,2,3,4,5,6,7,8,9,10]\n",
+    "d_valor= list(map(calcular_d, valores))\n",
+    "print (d_valor)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Código de solución estudiante 1\n",
-    "\n",
-    "    \n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
