--- a/proyectoconjunto3_OValenzuela_BValadez.ipynb
+++ b/proyectoconjunto3_OValenzuela_BValadez.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -276,10 +276,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La oración extrayendo las vocales resultaría así vrbl =  rlcn  rqr,  pr btnr  l  vlr  d n  crt  trmn,  l cncmnt d ls ds ntrrs\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_de_vocales= list(\"aeiouáéíóúü\") \n",
+    "sin_vocales = [ caracter for caracter in lista_de_caracteres if caracter.lower() not in lista_de_vocales]\n",
+    "\n",
+    "print(\"La oración extrayendo las vocales resultaría así\",\"\".join(sin_vocales)) # .join formará una cadena de caracteres, con los elementos de la lista dada\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -325,10 +338,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Las palabras con 4 letras son: ['para']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_de_palabras = oracion.split()\n",
+    "palabras_de_4_letras = [palabra for palabra in lista_de_palabras if len(palabra) == 4]\n",
+    "print(\"Las palabras con 4 letras son:\", palabras_de_4_letras)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -378,10 +403,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La longitud de cada palabra es:  {'variable': 8, '=': 1, 'relación': 8, 'requiere,': 9, 'para': 4, 'obtener': 7, 'el': 2, 'valor': 5, 'de': 2, 'un': 2, 'cierto': 6, 'término,': 8, 'conocimiento': 12, 'los': 3, 'dos': 3, 'anteriores': 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "compresion_diccionario= {palabra: len(palabra) for palabra in lista_de_palabras} #Los elementos de un diccionario se encuentran encerrados entre {} \n",
+    "print(\"La longitud de cada palabra es: \",compresion_diccionario)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -498,10 +534,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Números del 1 al 1000 que son divisibles por cualquier dígito aparte del 1 (2-9): \n",
+      "[2, 3, 4, 5, 6, 7, 8, 9, 12, 15, 20, 22, 24, 25, 26, 28, 30, 32, 33, 35, 36, 39, 40, 42, 44, 45, 48, 50, 52, 55, 60, 62, 63, 64, 65, 66, 70, 72, 75, 77, 80, 82, 84, 85, 88, 90, 92, 93, 95, 96, 99, 102, 104, 105, 112, 115, 120, 122, 123, 124, 125, 126, 128, 132, 135, 138, 140, 142, 144, 145, 147, 148, 150, 152, 153, 155, 156, 162, 164, 165, 168, 172, 175, 182, 183, 184, 185, 186, 189, 192, 195, 198, 200, 202, 204, 205, 206, 208, 210, 212, 213, 214, 215, 216, 217, 218, 220, 222, 224, 225, 226, 228, 230, 231, 232, 234, 235, 236, 237, 238, 240, 242, 243, 244, 245, 246, 248, 250, 252, 254, 255, 256, 258, 260, 262, 264, 265, 266, 268, 270, 272, 273, 274, 275, 276, 278, 279, 280, 282, 284, 285, 286, 287, 288, 290, 292, 294, 295, 296, 297, 298, 300, 302, 303, 304, 305, 306, 309, 312, 315, 318, 320, 321, 322, 324, 325, 326, 327, 328, 330, 332, 333, 335, 336, 339, 340, 342, 344, 345, 348, 350, 351, 352, 354, 355, 357, 360, 362, 363, 364, 365, 366, 368, 369, 371, 372, 375, 378, 381, 382, 384, 385, 387, 390, 392, 393, 395, 396, 399, 400, 402, 404, 405, 408, 412, 415, 416, 420, 422, 423, 424, 425, 426, 427, 428, 432, 435, 436, 438, 440, 442, 444, 445, 448, 450, 452, 453, 455, 456, 459, 460, 462, 464, 465, 468, 472, 475, 476, 480, 482, 483, 484, 485, 486, 488, 492, 495, 496, 497, 500, 502, 504, 505, 510, 512, 513, 515, 516, 520, 522, 524, 525, 526, 528, 530, 531, 532, 534, 535, 537, 540, 542, 543, 544, 545, 546, 548, 549, 550, 552, 555, 560, 562, 564, 565, 567, 568, 570, 572, 573, 574, 575, 576, 580, 582, 584, 585, 590, 592, 594, 595, 600, 602, 603, 604, 605, 606, 608, 612, 615, 618, 620, 622, 624, 625, 626, 628, 630, 632, 633, 635, 636, 637, 639, 640, 642, 644, 645, 648, 650, 652, 654, 655, 660, 662, 663, 664, 665, 666, 672, 675, 678, 679, 680, 682, 684, 685, 688, 690, 692, 693, 695, 696, 700, 702, 704, 705, 707, 712, 714, 715, 720, 721, 722, 723, 724, 725, 726, 728, 729, 732, 735, 738, 740, 742, 744, 745, 748, 749, 750, 752, 753, 755, 756, 762, 763, 764, 765, 768, 770, 772, 775, 777, 782, 783, 784, 785, 786, 791, 792, 795, 798, 800, 802, 804, 805, 808, 812, 813, 815, 816, 819, 820, 822, 824, 825, 826, 828, 831, 832, 834, 835, 837, 840, 842, 843, 844, 845, 846, 847, 848, 850, 852, 855, 856, 862, 864, 865, 872, 873, 875, 876, 880, 882, 884, 885, 888, 891, 892, 895, 896, 900, 902, 903, 904, 905, 906, 909, 912, 915, 917, 918, 920, 922, 924, 925, 926, 927, 928, 930, 932, 933, 935, 936, 939, 940, 942, 944, 945, 948, 950, 952, 954, 955, 960, 962, 963, 964, 965, 966, 968, 972, 973, 975, 981, 982, 984, 985, 987, 990, 992, 993, 995, 996, 999]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros_divisibles = [numero for numero in range(1, 1001) if any(str(digito) != '1' and int(digito) != 0 and numero % int(digito) == 0 for digito in str(numero))]\n",
+    "\n",
+    "print(\"Números del 1 al 1000 que son divisibles por cualquier dígito aparte del 1 (2-9): \")\n",
+    "print(numeros_divisibles)"
+   ]
   }
  ],
  "metadata": {
