--- a/proyectoconjunto3_OValenzuela_BValadez.ipynb
+++ b/proyectoconjunto3_OValenzuela_BValadez.ipynb
@@ -461,8 +461,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -540,14 +542,14 @@
        "        999, 1000])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "numeros= np.arange(1,1001)\n",
-    "np.array([i for i in numeros if [d for d in range (2,10) if i%d==0]])"
+    "np.array([i for i in numeros if [d for d in range (2,9) if i%d==0]])"
    ]
   },
   {
