--- a/proyectoconjunto3_OValenzuela_BValadez.ipynb
+++ b/proyectoconjunto3_OValenzuela_BValadez.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,6 +576,73 @@
     "\n",
     "print(\"Números del 1 al 1000 que son divisibles por cualquier dígito aparte del 1 (2-9): \")\n",
     "print(numeros_divisibles)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como ejemplo simple de una simulación de Monte Carlo, considere calcular la probabilidad de una suma particular del lanzamiento de tres dados (cada dado tiene valores del uno al seis). Además cada dado tiene las siguientes carácterísticas: el primer dado no está cargado (distribución uniforme todos son equiprobables); el segundo y tercer dado están cargados basados en una distribución binomial con parámetros (`n=5, p=0.5` y `n=5, p=0.2`). Calcule la probabilidad de que la suma resultante sea 7, 14 o 18."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solución Estudiante 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Solución Estudiante 2\n",
+    "\n",
+    "import numpy as np\n",
+    "from scipy.stats import binom\n",
+    "\n",
+    "def sum_probability(sum_value):\n",
+    "    p_uniform = 1/6  # probability of getting a specific value on the uniform dice\n",
+    "    p_binom_1 = binom.pmf(sum_value, 5, 0.5)  # probability of getting the sum value on the binomial dice\n",
+    "    p_binom_2 = binom.pmf(sum_value, 5, 0.2)\n",
+    "    \n",
+    "    # calculate the probability of getting the specified sum value by summing over all possible outcomes\n",
+    "    prob = 0\n",
+    "    for i in range(1, 7):\n",
+    "        for j in range(1, 7):\n",
+    "            for k in range(1, 7):\n",
+    "                if i+j+k == sum_value:\n",
+    "                    prob += p_uniform + p_binom_1 + p_binom_2\n",
+    "\n",
+    "    return prob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.6666666666666667, 2.4999999999999996, 3.4999999999999987, 4.166666666666665, 4.499999999999999, 4.499999999999999, 4.166666666666665, 3.4999999999999987, 2.4999999999999996, 1.6666666666666667, 0.9999999999999999, 0.5, 0.16666666666666666]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([sum_probability(sum_value) for sum_value in range(6,19)])"
    ]
   }
  ],
