--- a/proyectoconjunto3_OValenzuela_BValadez.ipynb
+++ b/proyectoconjunto3_OValenzuela_BValadez.ipynb
@@ -596,11 +596,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La probabilidad de obtener una suma de 7 es aproximadamente 0.16093\n",
+      "La probabilidad de obtener una suma de 14 es aproximadamente 0.00050\n",
+      "La probabilidad de obtener una suma de 18 es aproximadamente 0.00000\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solución Estudiante 1"
+    "import random\n",
+    "\n",
+    "def lanzar_dados():\n",
+    "    dado1 = random.randint(1, 6)\n",
+    "    dado2 = random.choices([0, 1], weights=[1-0.5, 0.5], k=5).count(1)\n",
+    "    dado3 = random.choices([0, 1], weights=[1-0.2, 0.2], k=5).count(1)\n",
+    "    return dado1 + dado2 + dado3\n",
+    "\n",
+    "# Simular lanzamiento de dados y contar cuántas veces se obtiene cada suma\n",
+    "num_lanzamientos = 100000\n",
+    "sumas = [7, 14, 18]\n",
+    "ocurrencias = {s: 0 for s in sumas}\n",
+    "\n",
+    "for i in range(num_lanzamientos):\n",
+    "    suma = lanzar_dados()\n",
+    "    if suma in sumas:\n",
+    "        ocurrencias[suma] += 1\n",
+    "\n",
+    "# Calcular la probabilidad estimada para cada suma\n",
+    "probabilidades = {s: ocurrencias[s] / num_lanzamientos for s in sumas}\n",
+    "\n",
+    "# Imprimir resultados\n",
+    "for s in sumas:\n",
+    "    print(f\"La probabilidad de obtener una suma de {s} es aproximadamente {probabilidades[s]:.5f}\")\n"
    ]
   },
   {
